k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arcc-website
  labels:
    name: arcc-website
